Moderationbot V2 (#67)
* bump to JDA 6 and JDA-Commands 5

* started migrating mod log

* fix buttons

* fix: navgiation of modlog display throws error

* bump to latest JDAC snapshot

* refactor create command modal handling

* use Java 25 main method

* fix typo

* move ModerationActLock check to Middleware

* use annotation for moderation lock

* add proper error message to moderation lock

* start migrating create commands to cv2

* chore: formatting

* fully migrate create commands to cv2

* start migration to fluava functions

* use Introspection API for MessageResolver

* add Fluava function for ModerationActType

* use root bundle

* add missing module export required for logback

* formatting

* fix

* further deprecate helpers

* migrate user act message to cv2

* clean up ModerationBot

* leftovers

* transform revert user info to cv2

* fully transform revert and delete command to cv2

* refactor: migrated config commands to cv2

* explicitly state revert bundle

* fix description selector

* fix timeout message

* bump to JDA 6.3

* formatting

* adjust comments to ftl spec

* disable mentions by default

* migrate adapter

* first pass on new permission command

* add role permissions command

* migrate purge and player search

* use di for middlewares

* migrate slowmode commands

* migrate note commands

* first pass on modlog command

* fully migrate mod log and mod detail

* rework detail command

* move ModerationAct component building to event classes

* remove unnecessary toLocale calls

* limit notes to 10

* set keepComponents globally to false

* leftovers

* formatting

* fix permissions

* replace terms with actual value

* suppress unsafe warning

* add missing bot status

* bump Fluava

* address review

* address review

* address review

* Refactor services (#68)

* refactor NotesService

* first pass on ModerationActService

* replace terms with actual value

* fully migrate ModerationActService

* rename ServiceModule to DatabaseModul